Release 0.3 (not yet released)

* The new function MAP-ENTRIES calls a supplied function for each entry in a
  given dictionary.

Release 0.2 (2025-01-05)

* The README.org file now uses the org-mode format. The examples have been
  updated.

* The spell/simple system is now an alias for the spell system since the
  improved memory footprint makes the former unnecessary.

* Compilation and loading times as well as memory footprint have been
  significantly reduced.

* Dictionaries can now be built from multiple source files. Additional words
  are now loaded from data/english-additions.txt.

Release 0.1 (2024-12-20)

* Initial release with basic lookup for the English dictionary but slow
  compilation and loading and a big memory footprint.
