@@ -1,0 +1,7 @@
+.header {
+    display: none;
+}
+
+.menu {
+    display: none;
+}
